sfdx-source/force-app/main/default/objects/Account_Payment_Account_Relation__c/Account_Payment_Account_Relation__c.object-meta.xml
<CustomObject>
    <label>Account To Payment Account Relation</label>
    <nameField>
        <displayFormat>APA-{0000}</displayFormat>
        <label>Account Payment Account Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account To Payment Account Relations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>