sfdx-source/force-app/main/default/objects/Account_Payment_Account_Relation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-1150: This field represents the associated Account</description>
    <inlineHelpText>This field represents the associated Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Accounts</relationshipLabel>
    <relationshipName>Account_Payment_Account_Relations</relationshipName>
    <type>Lookup</type>
</CustomField>