sfdx-source/force-app/main/default/objects/Account_Payment_Account_Relation__c/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <description>LEM-1150: This field represents the associated Account record type</description>
    <formula>Account__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field represents the associated Account record type</inlineHelpText>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>