sfdx-source/force-app/main/default/objects/Account_Payment_Account_Relation__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>LEM-1150: This field represents the associated Accounts address</description>
    <formula>Account__r.Account_Address__c</formula>
    <inlineHelpText>This field represents the associated Accounts address</inlineHelpText>
    <label>Address</label>
    <type>Text</type>
</CustomField>