sfdx-source/force-app/main/default/objects/Account_Payment_Account_Relation__c/fields/Billing_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email__c</fullName>
    <description>LEM-10916: Page Layout Enhancements</description>
    <formula>Payment_Account__r.Billing_Contact_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact Email</label>
    <type>Text</type>
</CustomField>