sfdx-source/force-app/main/default/objects/Account_Payment_Account_Relation__c/fields/Billing_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Name__c</fullName>
    <description>LEM-4958: It represents the Billing Contact Name of the Payment Account.</description>
    <formula>Payment_Account__r.Billing_Contact_Name__r.Contact_Name__c</formula>
    <label>Billing Contact Name</label>
    <type>Text</type>
</CustomField>