sfdx-source/force-app/main/default/objects/Account_Payment_Account_Relation__c/fields/Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Business_Account__c</fullName>
    <description>EM-9975: Associate an Agency to the Opportunity</description>
    <formula>Payment_Account__r.Business_Account__r.Name</formula>
    <label>Business Account</label>
    <type>Text</type>
</CustomField>