sfdx-source/force-app/main/default/objects/Account_Payment_Account_Relation__c/fields/Business_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Type__c</fullName>
    <description>LEM-9975: Associate an Agency to the Opportunity</description>
    <formula>TEXT (Payment_Account__r.Business_Account__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Account Type</label>
    <type>Text</type>
</CustomField>