sfdx-source/force-app/main/default/objects/Account_Payment_Account_Relation__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>LEM-4958: It represents the Business Unit of the Payment Account.</description>
    <formula>TEXT(Payment_Account__r.Business_Unit__c)</formula>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>