sfdx-source/force-app/main/default/objects/Account_Payment_Account_Relation__c/fields/Legal_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Business_Name__c</fullName>
    <description>LEM-1150: This field represents the associated Accounts legal business name.</description>
    <formula>Account__r.Legal_Business_Name__c</formula>
    <inlineHelpText>This field represents the associated Accounts legal business name.</inlineHelpText>
    <label>Legal Business Name</label>
    <type>Text</type>
</CustomField>