sfdx-source/force-app/main/default/objects/Account_Payment_Account_Relation__c/fields/NetSuite_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_ID__c</fullName>
    <description>LEM-1150: This field represents the associated Accounts Netsuite ID.</description>
    <formula>Payment_Account__r.NetSuite_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field represents the associated Accounts Netsuite ID.</inlineHelpText>
    <label>NetSuite ID</label>
    <type>Text</type>
</CustomField>