sfdx-source/force-app/main/default/objects/Account_Payment_Account_Relation__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>LEM-2826: Defaulting Payment Terms based on the Payment Account.</description>
    <formula>TEXT(Payment_Account__r.Payment_Terms__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms</label>
    <type>Text</type>
</CustomField>