sfdx-source/force-app/main/default/objects/Account_Payment_Account_Relation__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>LEM-1150: This field represents the associated Payment account record type</description>
    <formula>Payment_Account__r.RecordType.Name</formula>
    <inlineHelpText>This field represents the associated Payment account record type</inlineHelpText>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>