sfdx-source/force-app/main/default/objects/Account_Payment_Account_Relation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>LEM-1150: This field represents the associated Accounts Type</description>
    <formula>TEXT(Account__r.Type)</formula>
    <inlineHelpText>This field represents the associated Accounts Type</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>