sfdx-source/force-app/main/default/objects/Account_Payment_Account_Relation__c/validationRules/Validate_Routing_Number_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Routing_Number_Length</fullName>
    <active>true</active>
    <description>LEM-10158</description>
    <errorConditionFormula>AND(
NOT($Permission.Bypass_Payment_Account_Validation_Rules),
NOT(ISBLANK(Payment_Account__r.RoutingNumber__c)),
OR(
AND( Account__r.BillingCountry = &apos;United States&apos;,
OR(NOT(REGEX(Payment_Account__r.RoutingNumber__c,&quot;[0-9]{9}&quot;)),BEGINS(Payment_Account__r.RoutingNumber__c,&quot;5&quot;),BEGINS(Payment_Account__r.RoutingNumber__c,&quot;4&quot;))),
AND( Account__r.BillingCountry = &apos;Canada&apos;,
NOT(REGEX(Payment_Account__r.RoutingNumber__c,&quot;[0-9]{5}&quot;))),
AND( Account__r.BillingCountry = &apos;Australia&apos;,
NOT(REGEX(Payment_Account__r.RoutingNumber__c,&quot;[0-9]{6}&quot;)))
)
)</errorConditionFormula>
    <errorMessage>Please enter the correct Routing Number length
US = 9 ; Routing number cannot start with 4 or 5
CA = 5
AUS = 6</errorMessage>
</ValidationRule>